syntax = 'proto3';

package auth;

option go_package = "/services";

service AuthService {
  rpc VerifyToken (VerifyRequest) returns (VerifyResponse);
}

message VerifyRequest {
  string token = 1;
}

message VerifyResponse {
  string userId = 1;
}
